[package]
name = "rust-programming-ladder-backend"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>", "Sverre Johann Bjørke <sverrejb@gmail.com>"]

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper_rocket" }
rocket = "0.3.3"
rocket_codegen = "0.3.3"
